--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
+    "axios": "^0.26.1",
     "ether": "^0.0.9",
     "hardhat": "^2.9.3",
+    "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
