--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,15 @@ typechain
 
 #Hardhat files
 cache
-artifacts
+artifacts/*
+!artifacts/contracts
+!artifacts/contracts/*
+!artifacts/contracts/NFT.sol
+artifacts/contracts/NFT.sol/*
+!artifacts/contracts/NFT.sol/NFT.json
+!artifacts/contracts/NFTMarket.sol
+artifacts/contracts/NFTMarket.sol/*
+!artifacts/contracts/NFTMarket.sol/NFTMarket.json
 
 #yarn
 yarn.lock
