--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@openzeppelin/contracts": "^4.5.0",
     "axios": "^0.26.1",
     "ether": "^0.0.9",
+    "ethers": "^5.6.4",
     "hardhat": "^2.9.3",
     "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
